force-app/baseMetadata/main/default/objects/Contact/fields/myCheckbox__c.field-meta.xml
<CustomField>
    <fullName>myCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>myCheckbox</label>
    <type>Checkbox</type>
</CustomField>