force-app/baseMetadata/main/default/objects/Contact/fields/myGeolocation__c.field-meta.xml
<CustomField>
    <fullName>myGeolocation__c</fullName>
    <label>myGeolocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>