force-app/baseMetadata/main/default/objects/Contact/fields/myNumber__c.field-meta.xml
<CustomField>
    <fullName>myNumber__c</fullName>
    <label>myNumber</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>