force-app/baseMetadata/main/default/objects/Contact/fields/myURL__c.field-meta.xml
<CustomField>
    <fullName>myURL__c</fullName>
    <label>myURL</label>
    <type>Url</type>
</CustomField>