force-app/baseMetadata/main/default/objects/Contact/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.PHONE5</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>